--- a/index.css
+++ b/index.css
@@ -26,9 +26,9 @@ body{
 }
 
 #column1-content{
-    height: calc(100% - 90px);
+    height: calc(100% - 6vw);
     width: 50vw;
-    padding: 45px;
+    padding: 3vw;
     position: fixed;
     display: flex;
     flex-direction: column;
@@ -100,8 +100,10 @@ body{
 #dr-mario-background{
     height: inherit;
     width: 100%;
-    background: url(./dr-mario-ss.png);
-    background-position-x: center;
+    background: url(./dr-mario-ss.png) no-repeat;
+    background-size: cover;
+    background-position-x: center ;
+    
 }
 
 #project2{
