--- a/index.css
+++ b/index.css
@@ -15,19 +15,28 @@ body{
 
 #column-hold{
     display: grid;
+    transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
+    
+}
+
+.column-pos-1{
     grid-template-columns: 50% 50% 50%;
-    transition: 1s cubic-bezier(0, -0.55, 0.265, 1.55);
+}
+
+.column-pos-2{
+    grid-template-columns: 0% 50% 50%;
+    animation: descriptionSlide1 2s ease-in-out;
 }
 
 /*  Brief CV  */
 
 #column1{
    height: 100vh;
-    
+    z-index: 1;
 }
 
 #column1-content{
-    height: calc(100% - 6vw);
+    height: calc(100vh - 6vw);
     width: 50vw;
     padding: 3vw;
     position: fixed;
@@ -87,7 +96,8 @@ body{
 
 /* Project Slides */
 #column2{
-    
+    z-index: 2;
+    transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
 }
 
 .project-slide{
@@ -119,6 +129,11 @@ body{
     background: aquamarine;
 }
 
+#column3 {
+    z-index: 3;
+    transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
+}
+
 
 ::-webkit-scrollbar {
     display: none;
@@ -136,5 +151,19 @@ body{
 
     100%{
         width: inherit; 
+    }
+}
+
+@keyframes descriptionSlide1 {
+    0%{
+        grid-template-columns: 50% 50% 50%;
+    }
+
+    50%{
+        grid-template-columns: 25% 50% 50%;
+    }
+
+    100%{
+        grid-template-columns: 0% 50% 50%;
     }
 }
