--- a/index.css
+++ b/index.css
@@ -96,6 +96,11 @@ body{
 #column2{
     z-index: 2;
     transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
+
+}
+
+.project-slide:hover{
+    cursor: pointer;
 }
 
 .project-slide, .description-slide{
@@ -126,11 +131,42 @@ body{
     background: aquamarine;
 }
 
+
+/* Description SLides */
+
 #column3 {
     z-index: 3;
     transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
 }
 
+.descrip-x{
+    font-family: 'ForSlug';
+    font-size: 2em;
+    position: absolute;
+    right: 3vw;
+}
+
+.description-content{
+    width: 25vw;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    margin:auto;
+    padding: 20vh;
+
+}
+
+.description-text{
+    font-family: 'Roboto';
+    font-weight: 300;
+    font-size: 21px;
+}
+
+.description-links a{
+    font-family: 'Roboto';
+    font-weight: 300;
+    font-size: 24px;
+}
 
 ::-webkit-scrollbar {
     display: none;
