--- a/index.css
+++ b/index.css
@@ -49,8 +49,6 @@ body{
 
 }
 
-
-
 #name{  
     animation: 2s ease-in-out animate ;
     font-family: 'ForName';
@@ -167,21 +165,36 @@ body{
     font-size: 36px;
 }
 
+.description-links{
+    margin-top: 5%;
+}
+
 .description-links a{
     font-family: 'Roboto';
     font-weight: 300;
     font-size: 24px;
     text-decoration: none;
+    color: darkgrey;
 }
 
-.description-links::after{
+.description-links a::after{
     content: "";
-    width: 100px;
-    background: blue;
+    width: 0px;
+    height: 1.5px;
+    background:  darkgray;
+    display: block;
+    transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
+}
+
+.description-links a:hover::after{
+    content: "";
+    width: 90px;
+    background:  darkgray;
+    display: block;
 }
 
 .description-links a:hover{
-    
+    color: rgb(121, 121, 121);
 }
 
 ::-webkit-scrollbar {
