--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ body{
 }
 
 #name{  
-    animation: 2s ease-in-out animate ;
+    animation: 2s ease-in-out animateName ;
     font-family: 'ForName';
     font-size: 5em;
     height: 100px;
@@ -64,6 +64,7 @@ body{
     font-size: 2em;
     margin-left: 10px;
     line-height: 40px;
+    animation: 2s slideInFromBottom
 }
 
 #skills-list{
@@ -95,7 +96,7 @@ body{
 #column2{
     z-index: 2;
     transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
-
+    animation: 2s slideInFromLeft ;
 }
 
 .project-slide:hover{
@@ -136,6 +137,7 @@ body{
 #column3 {
     z-index: 3;
     transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
+    
 }
 
 .descrip-x{
@@ -143,10 +145,14 @@ body{
     font-size: 2em;
     position: absolute;
     right: 3vw;
+    color: darkgray;
+    transition: .745s ;
+
 }
 
 .descrip-x:hover{
     cursor: pointer;
+    transform: rotate(40deg);
 }
 
 .description-content{
@@ -180,15 +186,19 @@ body{
 .description-links a::after{
     content: "";
     width: 0px;
-    height: 1.5px;
+    height: 5px;
     background:  darkgray;
     display: block;
     transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
 }
 
+.description-links a:nth-of-type(2):hover::after{
+    width:130px;
+}
+
 .description-links a:hover::after{
     content: "";
-    width: 90px;
+    width: 93px;
     background:  darkgray;
     display: block;
 }
@@ -201,7 +211,7 @@ body{
     display: none;
   }
 
-@keyframes animate{
+@keyframes animateName{
     0%{
        width: 42px; 
        overflow-wrap: break-word;
@@ -217,16 +227,34 @@ body{
     }
 }
 
-@keyframes descriptionSlide1 {
-    0%{
-        grid-template-columns: 50% 50% 50%;
+@keyframes slideInFromLeft {
+    0% {
+      transform: translateX(100%);
+      opacity: 0;
     }
+    40% {
+        transform: translateX(100%);
+        opacity: 0;
+      }
 
-    50%{
-        grid-template-columns: 25% 50% 50%;
+    100% {
+      transform: translateX(0);
+      
     }
+  }
 
-    100%{
-        grid-template-columns: 0% 50% 50%;
+  @keyframes slideInFromBottom {
+    0% {
+      transform: translateY(50%);
+      opacity: 0;
     }
-}
+    40% {
+        transform: translateY(50%);
+        opacity: 0;
+      }
+
+    100% {
+      transform: translateX(0);
+      
+    }
+  }
