--- a/index.css
+++ b/index.css
@@ -17,15 +17,7 @@ body{
     display: grid;
     transition: .745s cubic-bezier(0.5, 0, 0.1, 1);   
     overflow-x: hidden;
-}
-
-.column-pos-1{
     grid-template-columns: 50% 50% 50%;
-}
-
-.column-pos-2{
-    grid-template-columns: 0% 50% 50%;
-    animation: descriptionSlide1 2s ease-in-out;
 }
 
 /*  Brief CV  */
@@ -60,7 +52,7 @@ body{
 #animated-name{
     transform-origin: left;
     overflow: hidden;
-    height: 100px;
+    
     animation: 2s ease-out animateName;   
 }
 
@@ -92,7 +84,6 @@ body{
 }
 
 #skills-list li:first-of-type{
-    
     text-decoration: underline;
     margin-bottom: 5px;
     font-weight: 400;
@@ -154,7 +145,7 @@ body{
     font-size: 2em;
     position: absolute;
     right: 3vw;
-    color: darkgray;
+    color: black;
     transition: .745s ;
 
 }
@@ -170,7 +161,7 @@ body{
     display: flex;
     flex-direction: column;
     margin:auto;
-    padding: 20vh;
+    padding: 18vh;
 
 }
 
@@ -275,4 +266,59 @@ body{
       transform: translateX(0);
       
     }
+  }
+
+  @media screen and (max-width: 450px){
+    #column-hold{
+        grid-template-rows: 75vh 100%;
+        grid-template-columns: 100% 100%;
+    }
+
+    #column1{
+        grid-column: 1 / 2;
+    }
+
+    #column1-content{
+        position: relative;
+        width: 94vw;
+        height: calc(75vh - 6vw);
+        align-items: center;
+    }
+
+    #column2{
+        grid-column: 1 / 2;
+        grid-row: 2/ 3;
+    }
+
+    #name{
+        font-size: 3em;
+        width: 283px;
+    }
+
+    #slug-line{
+        font-size: 1em;
+        line-height: 20px;
+        width: 220px;
+    }
+
+    #skills-list li{
+        font-size: 1em;
+    }
+
+    #column3{
+        grid-column: 2 / 2;
+        grid-row: 2/ 3;
+    }
+
+    .description-content{
+        width: 50vw;
+        
+        padding: 18vh 0;
+    }
+
+    .description-text{
+        font-size: 1em;
+
+    }
+    
   }
