--- a/index.css
+++ b/index.css
@@ -65,12 +65,18 @@ body{
     animation: 2s slideInFromBottom;
 }
 
-#skills-list{
+#tom-lists{
+    display: flex;
+    justify-content: space-between;
+    width: 473px;
+}
+
+.tom-list{
     list-style: none;
     padding-left: 10px;
 }
 
-#skills-list li{
+.tom-list li{
     font-family: 'Roboto';
     font-weight: 300;
     font-size: 21px;
@@ -79,11 +85,16 @@ body{
     opacity: 0;
 }
 
+.tom-list li a{
+    text-decoration: none;
+    color: black;
+}
+
 #skills-list li:hover{
     cursor: default;
 }
 
-#skills-list li:first-of-type{
+.tom-list li:first-of-type{
     text-decoration: underline;
     margin-bottom: 5px;
     font-weight: 400;
@@ -109,11 +120,6 @@ body{
 
 .project-wrapper{
     height: inherit;
-}
-
-
-#project1{
-     
 }
 
 #dr-mario-background{
